--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -55,6 +55,10 @@ main {
 		width: 40px;
 		height: 40px;
 	}
+  .date {
+    display: inline-block;
+    margin-top: -2px;
+  }
 }
 #print_btn {
 	.fa {
